--- a/app/src/main/res/layout/activity_game_nav.xml
+++ b/app/src/main/res/layout/activity_game_nav.xml
@@ -50,14 +50,13 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/back_to_stats_button"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_button"
         android:fontFamily="@font/sen_bold"
         android:layout_margin="8dp"
-        android:text="Back to Stats"
+        android:text="@string/back_to_wrapped"
         android:textAllCaps="false"
-        android:backgroundTint="@color/purpur"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
